--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     content="A professional 𝗨𝗜/𝗨𝗫 𝗱𝗲𝘀𝗶𝗴𝗻𝗲𝗿 and an expert CMS/Webflow/Wordpress Developer as well" />
 
   <!-- Site Title -->
-  <title>Imran Mehedi - Personal Portfolio</title>
+  <title>Imran Mehedi - An Expert UI/UX Designer and Webflow Developer</title>
 
   <!-- Place favicon.ico in the root directory -->
   <link rel="apple-touch-icon" href="assets/img/favicon.png" />
@@ -40,22 +40,20 @@
 <body class="tj-magic-cursor">
 
   <!-- Preloader Area Start -->
-  <!-- <div class="preloader">
+  <div class="preloader">
     <svg viewBox="0 0 1000 1000" preserveAspectRatio="none">
       <path id="preloaderSvg" d="M0,1005S175,995,500,995s500,5,500,5V0H0Z"></path>
     </svg>
     <div class="preloader-heading">
       <div class="load-text">
-        <span>L</span>
-        <span>o</span>
-        <span>a</span>
-        <span>d</span>
-        <span>i</span>
-        <span>n</span>
-        <span>g</span>
+        <span>Get</span>
+        <span>Ready</span>
+        <span>To</span>
+        <span>Explore!</span>
+
       </div>
     </div>
-  </div> -->
+  </div>
   <!-- Preloader Area End -->
 
   <!-- start: magic cursor -->
@@ -105,7 +103,7 @@
           <div class="header-media d-none d-lg-inline-flex">
             <ul class="ul-reset social-icons">
               <li>
-                <a href="#">
+                <a href="https://wa.me/8801757647319">
                   <svg width="40px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#ffffff">
                     <g id="SVGRepo_bgCarrier" stroke-width="0" />
                     <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round" />
@@ -118,7 +116,7 @@
                 </a>
               </li>
               <li>
-                <a href="#"><svg fill="#FFFFFF" width="20px" viewBox="0 0 24 24" role="img"
+                <a href="https://bit.ly/upwork-imranmehedi"><svg fill="#FFFFFF" width="20px" viewBox="0 0 24 24" role="img"
                     xmlns="http://www.w3.org/2000/svg">
                     <title>Upwork icon</title>
                     <path
@@ -126,7 +124,7 @@
                   </svg></a>
               </li>
               <li>
-                <a href="#">
+                <a href="https://bit.ly/fiverr-imran">
                   <svg fill="#FFFFFF" width="20px" viewBox="-2.5 -2 24 24" xmlns="http://www.w3.org/2000/svg"
                     preserveAspectRatio="xMinYMin" class="jam jam-fiverr">
                     <path
@@ -197,7 +195,7 @@
                 </a>
               </li>
               <li>
-                <a href="#"><svg fill="#FFFFFF" width="20px" viewBox="0 0 24 24" role="img"
+                <a href="https://bit.ly/upwork-imranmehedi"><svg fill="#FFFFFF" width="20px" viewBox="0 0 24 24" role="img"
                     xmlns="http://www.w3.org/2000/svg">
                     <title>Upwork icon</title>
                     <path
@@ -205,7 +203,7 @@
                   </svg></a>
               </li>
               <li>
-                <a href="#">
+                <a href="https://bit.ly/fiverr-imran">
                   <svg fill="#FFFFFF" width="20px" viewBox="-2.5 -2 24 24" xmlns="http://www.w3.org/2000/svg"
                     preserveAspectRatio="xMinYMin" class="jam jam-fiverr">
                     <path
@@ -1611,7 +1609,7 @@
                   </h2>
                 </div>
                 <div class="cta-button wow fadeInUp" data-wow-delay=".5s">
-                  <a href="https://bit.ly/fiverr-imran" class="btn tj-btn-primary">Message me on Whatsapp</a>
+                  <a href="https://wa.me/8801757647319" class="btn tj-btn-primary">Whatsapp</a>
                 </div>
               </div>
             </div>
@@ -1661,7 +1659,7 @@
               <ul>
                 <li>
                   <a href="https://bit.ly/fiverr-imran">
-                    <span class="active-media">Fiverr</span>
+                    <span class="active-media">Hire on Fiverr</span>
                     <span class="hover-media">
                       <svg fill="#FFFFFF" width="20px" viewBox="-2.5 -2 24 24" xmlns="http://www.w3.org/2000/svg"
                         preserveAspectRatio="xMinYMin" class="jam jam-fiverr">
@@ -1673,8 +1671,8 @@
                   </a>
                 </li>
                 <li>
-                  <a href="#">
-                    <span class="active-media">UpWork</span>
+                  <a href="https://bit.ly/upwork-imranmehedi">
+                    <span class="active-media">Hire on Upwork</span>
                     <span class="hover-media">
                       <svg fill="#FFFFFF" width="20px" viewBox="0 0 24 24" role="img"
                         xmlns="http://www.w3.org/2000/svg">
@@ -1686,7 +1684,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="#">
+                  <a href="https://wa.me/8801757647319">
                     <span class="active-media">Whatsapp</span>
                     <span class="hover-media">
                       <svg width="40px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"
