--- a/index.html
+++ b/index.html
@@ -46,11 +46,13 @@
     </svg>
     <div class="preloader-heading">
       <div class="load-text">
-        <span>Get</span>
-        <span>Ready</span>
-        <span>To</span>
-        <span>Explore!</span>
-
+        <span>L</span>
+        <span>o</span>
+        <span>a</span>
+        <span>d</span>
+        <span>i</span>
+        <span>n</span>
+        <span>g</span>
       </div>
     </div>
   </div>
@@ -134,7 +136,7 @@
                 </a>
               </li>
               <li>
-                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="https://www.linkedin.com/in/ali-imran-mehedi"><i class="fa-brands fa-linkedin-in"></i></a>
               </li>
             </ul>
           </div>
@@ -213,7 +215,7 @@
                 </a>
               </li>
               <li>
-                <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                <a href="https://www.linkedin.com/in/ali-imran-mehedi"><i class="fa-brands fa-linkedin-in"></i></a>
               </li>
             </ul>
           </div>
@@ -1701,7 +1703,7 @@
                   </a>
                 </li>
                 <li>
-                  <a href="https://www.linkedin.com/in/ali-imran-mehedi/">
+                  <a href="https://www.linkedin.com/in/ali-imran-mehedi">
                     <span class="active-media">My Linkedin</span>
                     <span class="hover-media"><i class="fa-brands fa-linkedin-in"></i></span>
                   </a>
