--- a/index.html
+++ b/index.html
@@ -1632,13 +1632,13 @@
               <div class="contact-footer-item">
                 <div class="contact_text">
                   <a href="mailto:business.imranmehedi@gmail.com">
-                    <span class="active-link">business.imranmehedi@gmail.com</span>
-                    <span class="hover-link">business.imranmehedi@gmail.com</span>
+                    <span class="active-link">imran@synexdigital.com</span>
+                    <span class="hover-link">imran@synexdigital.com</span>
                   </a>
                 </div>
                 <div class="line">/</div>
                 <div class="contact_text">
-                  <span class="location">Dhanmondi, Dhaka, Bangladesh</span>
+                  <span class="location">Dhaka, Bangladesh</span>
                 </div>
                 <div class="line">/</div>
                 <div class="contact_text">
