--- a/index.html
+++ b/index.html
@@ -1631,7 +1631,7 @@
             <div class="footer-contact-infos">
               <div class="contact-footer-item">
                 <div class="contact_text">
-                  <a href="mailto:business.imranmehedi@gmail.com">
+                  <a href="mailto:imran@synexdigital.com">
                     <span class="active-link">imran@synexdigital.com</span>
                     <span class="hover-link">imran@synexdigital.com</span>
                   </a>
